fix(_base.scss): update scrollbar-gutter to use var(--scrollbar-gutter) feat(_variables.scss): add scrollbar-gutter variable

--- a/src/routes/styles/foundation/_base.scss
+++ b/src/routes/styles/foundation/_base.scss
@@ -34,11 +34,8 @@
 	font-display: swap;
 }
 
-html {
-	scrollbar-gutter: stable;
-}
-
 body {
+	padding-inline-start: var(--scrollbar-gutter);
 	margin: 0;
 	font-weight: 400;
 	color: var(--c-primary);
